# Universe

./: .gitignore  README.md
.github/workflows/: update-server-request.yaml
c3po/: rsa.sh
c3po/uni/: .gitignore  desc.json  help.sh  mp3.sh  pom.xml  rm-arc-branch.sh  rm-git-branch.sh  uni.bat  uni.sh
droid/: README.md
droid/yahtzee/: .gitignore
droid/yahtzee/app/: build.gradle.kts
droid/yahtzee/gradle/: libs.versions.toml
jawa/: .gitignore  README.md  logging.md  pom.xml
jawa/bb-8/: pom.xml
jawa/boba-fett/: mongo-setup.md  pom.xml
jawa/boba-fett/holidays/: 2024.json  2025.json  2026.json  2027.json  2028.json  2029.json  2030.json  2031.json  2032.json  2033.json  2034.json
jawa/chopper/: pom.xml
jawa/fulcrum/: pom.xml
jawa/hyperspace/: pom.xml
jawa/hyperspace/chopper-client/: README.md  pom.xml
jawa/hyperspace/jawa-complex-test/: pom.xml
jawa/jocasta/: README.md  pom.xml
jawa/korriban/: pom.xml
jawa/padawan/: pom.xml
jawa/padawan-kt/: pom.xml
jawa/probe-droid/: pom.xml
jawa/sabacc/: pom.xml
jawa/scarif/: README.md  pom.xml  requests.md  schema.sql
jawa/uni/: pom.xml  uni.bat  uni.sh
jawa/venator/: README.md  pom.xml  venator.sh
jawa/yoda/: pom.xml
sarlacc/: .gitignore  pyproject.toml  requirements.txt
sarlacc/src/autogui/: adobe_premiere_effects.py  checker.py  circle_coordinates.py  clicker.py  coordinates.py  idle-non-stop.py  idle.py
sarlacc/src/py_padawan/: google_email.py  google_forms.py  minecraft_rounded_cube.py  pdf.py  yahtzee.py
sarlacc/src/py_padawan/exam/: games_theory.py  oge_cipher_fano_condition.py
(+1298 files in other folders)
