[project]
name = "sarlacc"
version = "0.1.0"
description = "Sarlacc Python Project"
authors = [
    { name = "Tima", email = "prohor2568@gmail.com" }
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "poetry-core (>=2.0.0,<3.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "pyttsx3 (>=2.99,<3.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pynput (>=1.8.1,<2.0.0)",
    "pdfrw (>=0.4,<0.5)",
    "pillow (>=12.1.0,<13.0.0)"
]

[tool.poetry]
packages = [
    { include = "autogui", from = "src" },
    { include = "holonet", from = "src" },
    { include = "py_core", from = "src" },
    { include = "py_holocron", from = "src" },
    { include = "py_padawan", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
